--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<meta name="keywords" content="">
 			
 
-			<title>Полигон</title>
+			<title>Bicycle_Theme</title>
 			<link href="css/style.css" rel="stylesheet">
 			<!-- Шрифты -->
 			<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
